bugfix - fix pdp story block content is overflowing on mobile
issue is caused by 100% max height rule. which is not necessary for mobile

--- a/src/pages/WorkHighlightPage/BlibliHighlights.module.scss
+++ b/src/pages/WorkHighlightPage/BlibliHighlights.module.scss
@@ -21,8 +21,6 @@
       'review-revamp review-revamp-story'
       'pdp-revamp-preview pdp-revamp-story'
       'pdp-secondary pdp-revamp-story';
-
-    text-align: left;
   }
 }
 
